--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/packages/*/node_modules
+
 /.pnp
 .pnp.js
 
@@ -10,13 +12,14 @@
 
 # production
 /build
+/packages/*/build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/packages/*/.env.local
+/packages/*/.env.development.local
+/packages/*/.env.test.local
+/packages/*/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
