--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,9 +20,9 @@ jobs:
     - name: yarn install
       run: |
         yarn install
-    - name: yarn build
+    - name: npx lerna build
       run: |
-        yarn build
+        npx lerna build
     - name: deploy to s3
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -32,4 +32,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "build"
+        SOURCE_DIR: "packages/class-scheduling/build"
