add npm client to lerna bootstrap

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,7 +20,7 @@ jobs:
     - name: yarn install
       run: |
         yarn install
-    - name: lerna bootstrap
+    - name: lerna bootstrap --npm-client yarn
       run: |
         npx lerna bootstrap
     - name: npx lerna build
