--- a/packages/class-scheduling/.env.production
+++ b/packages/class-scheduling/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_MAKE_CALL=true
-REACT_APP_API_PATH=https://16vsnz6hvi.execute-api.ap-south-1.amazonaws.com
+REACT_APP_API_PATH=https://cata8t70b2.execute-api.ap-south-1.amazonaws.com
